# litcontainers

./: .travis.yml  Cargo.toml  README.md
litcontainers/: Cargo.toml
litcontainers/benches/: comparison_bench.rs
litcontainers/src/: lib.rs
litcontainers/src/container/: container.rs  mod.rs  operations.rs  ops.rs  ops_sci.rs  types.rs  wrapper.rs
litcontainers/src/format/: axis.rs  dimensions.rs  mod.rs  print.rs  scalar_type.rs  size.rs  stride.rs
litcontainers/src/format/element/: element.rs  mod.rs  numeric.rs  scalar.rs
litcontainers/src/functions/: argmax.rs  find.rs  mod.rs  normalization.rs  sum.rs
litcontainers/src/iterator/: axis.rs  dim.rs  dim_splittable.rs  full.rs  into.rs  iter_slice_splittable.rs  iter_tools.rs  iterator.rs  mod.rs  parallel.rs  slice.rs
litcontainers/src/iterator/refactor/: axis.rs  full.rs  mod.rs
litcontainers/src/macros/: constructors.rs  join.rs  mod.rs  slice.rs
litcontainers/src/ops/: arithmetic_scalar.rs  arithmetic_storage.rs  input.rs  mod.rs  ops.rs  ops_traits.rs  scientific.rs
litcontainers/src/ops/arithmetic/: macros.rs  mod.rs  scalar.rs  storage.rs  (+1 more)
litcontainers/src/slice/: mod.rs  offset.rs  ops.rs  ops_sci.rs  range.rs  slice.rs  sliceable.rs
litcontainers/src/storage/: constructors.rs  dynamic.rs  mod.rs  mutable.rs  mutation.rs  ownable.rs  printing.rs  simple_types.rs  sized.rs  storage.rs  transpose.rs  utils.rs
litcontainers/src/wrapper/: mod.rs  operations.rs  types.rs  wrapper.rs
litcontainers/tests/: functions.rs  iterators.rs  macros.rs  mod.rs  ops.rs  printing.rs  slice.rs  storage.rs
(+65 files in other folders)
