[package]
name = "litcontainers"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
litcontainers_derive = {path = "../litcontainers_derive"}
typenum = "1.10.0"
generic-array = "0.13.0"
rand = "0.6.5"
num-traits = "0.2"
num-complex = "0.2"
rayon = "1.1.0"
itertools = "0.8.0"
derive-new = "0.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "comparison_bench"
harness = false